acvm-repo/msgpack_tagged/tests/compile_fail/tag_default_without_number.stderr
error: expected an integer tag or the keyword `skip`
  --> tests/compile_fail/tag_default_without_number.rs:10:11
   |
10 |     #[tag(default)]
   |           ^^^^^^^
